force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Ticket_Size__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Ticket_Size__c</fullName>
    <label>Ticket Size Operating</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1cr</fullName>
            </value>
            <value>
                <fullName>1-3Cr</fullName>
            </value>
            <value>
                <fullName>3-5Cr</fullName>
            </value>
            <value>
                <fullName>5-10Cr</fullName>
            </value>
            <value>
                <fullName>10-20Cr</fullName>
            </value>
            <value>
                <fullName>25Cr+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>