force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Type__c</fullName>
    <label>REC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>