force-app/main/default/objects/EYI_REC__c/fields/EYI_REC_Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Vendor_Code__c</fullName>
    <label>REC Vendor Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>