force-app/main/default/objects/EYI_REC__c/fields/EYI_Reconciliation_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reconciliation_Account__c</fullName>
    <label>Reconciliation Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creditors - Material Domestic</fullName>
            </value>
            <value>
                <fullName>Creditors - Material Imports</fullName>
            </value>
            <value>
                <fullName>Creditors - Contractors &amp; Services</fullName>
            </value>
            <value>
                <fullName>Creditors - Employees</fullName>
            </value>
            <value>
                <fullName>Creditors - Expenses</fullName>
            </value>
            <value>
                <fullName>Creditors - Banks &amp; Financial Inst</fullName>
            </value>
            <value>
                <fullName>Creditors - Group Companies</fullName>
            </value>
            <value>
                <fullName>Retention Money Payable</fullName>
            </value>
            <value>
                <fullName>Creditors For TDR</fullName>
            </value>
            <value>
                <fullName>Creditor for Property</fullName>
            </value>
            <value>
                <fullName>Creditor for Trading Sales</fullName>
            </value>
            <value>
                <fullName>Creditor : Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>