force-app/main/default/objects/EYI_REC__c/fields/EYI_Reference_Client_3__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reference_Client_3__c</fullName>
    <label>Reference Client 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>