force-app/main/default/objects/EYI_REC__c/fields/EYI_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Unregistered</fullName>
                <default>true</default>
                <label>Unregistered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>