force-app/main/default/objects/EYI_REC__c/fields/EYI_Rejection_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rejection_Remark__c</fullName>
    <label>Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>