force-app/main/default/objects/EYI_REC__c/fields/EYI_Request_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Request_Received_Date__c</fullName>
    <label>Request Received Date</label>
    <type>DateTime</type>
</CustomField>