force-app/main/default/objects/EYI_REC__c/fields/EYI_RERA_Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Certificate_No__c</fullName>
    <label>RERA Certificate No</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>