force-app/main/default/objects/EYI_REC__c/fields/EYI_RERA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Expiry_Date__c</fullName>
    <label>RERA Expiry Date</label>
    <type>Date</type>
</CustomField>