force-app/main/default/objects/EYI_REC__c/fields/EYI_RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Number__c</fullName>
    <label>RERA Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>