force-app/main/default/objects/EYI_REC__c/fields/EYI_RERA_Registered__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Registered__c</fullName>
    <label>RERA Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>