force-app/main/default/objects/EYI_REC__c/fields/EYI_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_ID__c</fullName>
    <label>SAP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>