force-app/main/default/objects/EYI_REC__c/fields/EYI_Secondary_Market__c.field-meta.xml
<CustomField>
    <fullName>EYI_Secondary_Market__c</fullName>
    <label>Secondary Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Rest of Maharashtra</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Rest of India</fullName>
                <isActive>false</isActive>
                <label>Rest of India</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>