force-app/main/default/objects/EYI_REC__c/fields/EYI_Secondary_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Secondary_Telephone_Number__c</fullName>
    <label>Secondary Telephone Number</label>
    <type>Phone</type>
</CustomField>