force-app/main/default/objects/EYI_REC__c/fields/EYI_Sent_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sent_for_Approval__c</fullName>
    <formula>ISPICKVAL(EYI_REC_Approval_Status__c, &quot;Submitted for Approval&quot;)</formula>
    <label>Sent for Approval</label>
    <type>Checkbox</type>
</CustomField>