force-app/main/default/objects/EYI_REC__c/fields/EYI_Stage_Of_Operation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stage_Of_Operation__c</fullName>
    <label>Stage Of Operation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Launch</fullName>
            </value>
            <value>
                <fullName>Sustenance</fullName>
            </value>
            <value>
                <fullName>RTMI</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>