force-app/main/default/objects/EYI_REC__c/fields/EYI_Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Classification__c</fullName>
    <label>Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GST Registered</fullName>
            </value>
            <value>
                <fullName>Not Registered</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Composition Scheme</fullName>
            </value>
            <value>
                <fullName>Special Economic Zone</fullName>
            </value>
            <value>
                <fullName>SEZ Developer</fullName>
            </value>
            <value>
                <fullName>SEZ Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>