force-app/main/default/objects/EYI_REC__c/fields/EYI_Ticket_Size_of_Client_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Ticket_Size_of_Client_1__c</fullName>
    <label>Ticket Size of Client 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>