force-app/main/default/objects/EYI_REC__c/fields/EYI_Top_Project_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Top_Project_1__c</fullName>
    <label>Top Project 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>