force-app/main/default/objects/EYI_REC__c/fields/EYI_Top_Project_2__c.field-meta.xml
<CustomField>
    <fullName>EYI_Top_Project_2__c</fullName>
    <label>Top Project 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>