force-app/main/default/objects/EYI_REC__c/fields/EYI_Tower__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>EYI_Tower__c</referenceTo>
    <relationshipLabel>REC Accounts</relationshipLabel>
    <relationshipName>REC_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>