force-app/main/default/objects/EYI_REC__c/fields/EYI_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Training_Status__c</fullName>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>