force-app/main/default/objects/EYI_REC__c/fields/EYI_Type_Of_RERA_Registration__c.field-meta.xml
<CustomField>
    <fullName>EYI_Type_Of_RERA_Registration__c</fullName>
    <label>Type Of RERA Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company/ Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>