force-app/main/default/objects/EYI_REC__c/fields/EYI_Udyog_Adhar__c.field-meta.xml
<CustomField>
    <fullName>EYI_Udyog_Adhar__c</fullName>
    <label>Udyog Adhar</label>
    <length>80</length>
    <type>Text</type>
</CustomField>