force-app/main/default/objects/EYI_REC__c/fields/is_Aadhar_E_KYC_Completed__c.field-meta.xml
<CustomField>
    <fullName>is_Aadhar_E_KYC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Aadhar E-KYC Completed ?</label>
    <type>Checkbox</type>
</CustomField>