force-app/main/default/objects/EYI_REC__c/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <formula>IF(
    OR(
         OwnerId  = $User.Id,
         Owner:User.ManagerId  = $User.Id,
         Owner:User.Manager.ManagerId  = $User.Id,
         $User.ProfileId  = &quot;00e9H000002Dd4B&quot;,
         $User.ProfileId = &quot;00eWd0000000FOr&quot;
    ),
    TRUE,
    FALSE
)</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>