force-app/main/default/objects/EYI_REC__c/fields/is_PAN_E_KYC_Completed__c.field-meta.xml
<CustomField>
    <fullName>is_PAN_E_KYC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is PAN E-KYC Completed ?</label>
    <type>Checkbox</type>
</CustomField>