force-app/main/default/objects/EYI_REC__c/fields/IsPANeKYCDone__c.field-meta.xml
<CustomField>
    <fullName>IsPANeKYCDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPANeKYCDone</label>
    <type>Checkbox</type>
</CustomField>