force-app/main/default/objects/EYI_REC__c/fields/REC_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>REC_Company_Name__c</fullName>
    <label>REC Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>