force-app/main/default/objects/EYI_REC__c/fields/REC_Status_to_Update__c.field-meta.xml
<CustomField>
    <fullName>REC_Status_to_Update__c</fullName>
    <label>REC Status to Update</label>
    <length>20</length>
    <type>Text</type>
</CustomField>