force-app/main/default/objects/EYI_REC__c/fields/Reference_Client_5__c.field-meta.xml
<CustomField>
    <fullName>Reference_Client_5__c</fullName>
    <label>Reference Client 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>