force-app/main/default/objects/EYI_REC__c/fields/Sourcing_Head__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REC_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>