force-app/main/default/objects/EYI_REC__c/fields/Sourcing_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager_Name__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <label>Sourcing Manager Name</label>
    <type>Text</type>
</CustomField>