force-app/main/default/objects/EYI_REC__c/fields/Sourcing_TL__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REC_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>