force-app/main/default/objects/EYI_REC__c/fields/Verification_PAN_process_description__c.field-meta.xml
<CustomField>
    <fullName>Verification_PAN_process_description__c</fullName>
    <label>Verification PAN process description</label>
    <type>TextArea</type>
</CustomField>