force-app/main/default/objects/EYI_REC__c/fields/Verified_AADHAR_Card_Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Verified_AADHAR_Card_Father_Name__c</fullName>
    <label>Verified AADHAR Card Father Name</label>
    <type>TextArea</type>
</CustomField>