force-app/main/default/objects/EYI_REC__c/fields/Verified_AADHAR_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Verified_AADHAR_Card_Number__c</fullName>
    <label>Verified AADHAR Card Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>