force-app/main/default/objects/EYI_REC__c/fields/Verified_DOB__c.field-meta.xml
<CustomField>
    <fullName>Verified_DOB__c</fullName>
    <label>Verified DOB</label>
    <type>Date</type>
</CustomField>