force-app/main/default/objects/EYI_REC__c/fields/Verified_PAN_Aadhar_Link_Details__c.field-meta.xml
<CustomField>
    <fullName>Verified_PAN_Aadhar_Link_Details__c</fullName>
    <label>Verified PAN Aadhar Link Details</label>
    <type>TextArea</type>
</CustomField>