force-app/main/default/objects/EYI_REC__c/fields/Verified_PAN_Name__c.field-meta.xml
<CustomField>
    <fullName>Verified_PAN_Name__c</fullName>
    <label>Verified PAN Name</label>
    <type>TextArea</type>
</CustomField>