force-app/main/default/objects/EYI_REC__c/fields/Verified_PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>Verified_PAN_Number__c</fullName>
    <label>Verified PAN Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>