force-app/main/default/objects/EYI_REC__c/validationRules/Aadhaar_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhaar_number_validation</fullName>
    <active>true</active>
    <description>Aadhaar number must be exactly 12 digits and contain only numbers.</description>
    <errorConditionFormula>AND(
    NOT( ISBLANK(EYI_Aadhar__c) ),
    NOT(REGEX(EYI_Aadhar__c, &quot;^[0-9]{12}$&quot;)),
    EYI_IsAutomationBypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>EYI_Aadhar__c</errorDisplayField>
    <errorMessage>Aadhaar number must be exactly 12 digits and contain only numbers.</errorMessage>
</ValidationRule>