force-app/main/default/objects/EYI_REC__c/validationRules/Anniversary_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Anniversary_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    EYI_Anniversary_Date__c &gt; TODAY(),
    EYI_IsAutomationBypassed__c = false
)</errorConditionFormula>
    <errorDisplayField>EYI_Anniversary_Date__c</errorDisplayField>
    <errorMessage>Anniversary Date cannot be in the future. Please enter a valid date.</errorMessage>
</ValidationRule>