force-app/main/default/objects/EYI_REC__c/validationRules/Birth_date_should_be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Birth_date_should_be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND( EYI_Birth_Date__c  &gt; TODAY(),EYI_IsAutomationBypassed__c = false)</errorConditionFormula>
    <errorDisplayField>EYI_Birth_Date__c</errorDisplayField>
    <errorMessage>DOB cannot be in the future. Please enter a valid date.</errorMessage>
</ValidationRule>