force-app/main/default/objects/EYI_REC__c/validationRules/Company_PAN_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_PAN_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IF( ISPICKVAL( EYI_Type_Of_RERA_Registration__c , &apos;Company/ Firm&apos;) ,  ISBLANK( EYI_Company_PAN_No__c ) , null),
EYI_IsAutomationBypassed__c = false)</errorConditionFormula>
    <errorDisplayField>EYI_Company_PAN_No__c</errorDisplayField>
    <errorMessage>Please enter the Company TAN No.</errorMessage>
</ValidationRule>