force-app/main/default/objects/EYI_REC__c/validationRules/Company_TAN_Card_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_TAN_Card_Number_Validation</fullName>
    <active>true</active>
    <description>Check Company TAN card number format.</description>
    <errorConditionFormula>AND(
NOT(
ISBLANK( EYI_Company_PAN_No__c ) ||
REGEX( EYI_Company_PAN_No__c , &quot;^[A-Z]{4}[0-9]{5}[A-Z]{1}$&quot;))
,
EYI_IsAutomationBypassed__c = false
)</errorConditionFormula>
    <errorDisplayField>EYI_Company_PAN_No__c</errorDisplayField>
    <errorMessage>Invalid Company TAN format.</errorMessage>
</ValidationRule>