force-app/main/default/objects/EYI_REC__c/validationRules/Correspondence_1_Pincode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Correspondence_1_Pincode_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( EYI_Correspondence_Country__c , &quot;India&quot;),
NOT(REGEX( EYI_Correspondence_Pincode_Office__c, &quot;^[1-9][0-9]{5}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>EYI_Correspondence_Pincode_Office__c</errorDisplayField>
    <errorMessage>Please enter a valid 6-digit pincode.</errorMessage>
</ValidationRule>