force-app/main/default/objects/EYI_REC__c/validationRules/Designation_Should_not_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Designation_Should_not_numeric</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNUMBER( EYI_Designation__c ),EYI_IsAutomationBypassed__c = false)</errorConditionFormula>
    <errorDisplayField>EYI_Designation__c</errorDisplayField>
    <errorMessage>Please enter valid Designation.</errorMessage>
</ValidationRule>