force-app/main/default/objects/EYI_REC__c/validationRules/GSTIN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GSTIN_Validation</fullName>
    <active>true</active>
    <description>Check GSTIN Validations.</description>
    <errorConditionFormula>AND(NOT(
  ISBLANK( EYI_GSTIN__c ) || 
  REGEX(EYI_GSTIN__c , &quot;^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$&quot;)
),
EYI_IsAutomationBypassed__c = false
)</errorConditionFormula>
    <errorDisplayField>EYI_GSTIN__c</errorDisplayField>
    <errorMessage>Invalid GSTIN format.</errorMessage>
</ValidationRule>