force-app/main/default/objects/EYI_REC__c/validationRules/Individual_PAN_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Individual_PAN_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF( ISPICKVAL( EYI_Type_Of_RERA_Registration__c , &apos;Individual&apos;) ,  ISBLANK( EYI_PAN_No__c ) , null),EYI_IsAutomationBypassed__c = false)</errorConditionFormula>
    <errorDisplayField>EYI_PAN_No__c</errorDisplayField>
    <errorMessage>Please enter the PAN No.</errorMessage>
</ValidationRule>