force-app/main/default/objects/EYI_REC__c/validationRules/Pincode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pincode_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  EYI_IsAutomationBypassed__c =false,
 NOT(ISBLANK(EYI_REC_Firm_Pincode__c)) ,
    ISPICKVAL( EYI_REC_Firm_Location__c , &quot;India&quot;),
    NOT(REGEX( EYI_REC_Firm_Pincode__c , &quot;^[1-9][0-9]{5}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>EYI_REC_Firm_Pincode__c</errorDisplayField>
    <errorMessage>Please enter a valid 6-digit pincode.</errorMessage>
</ValidationRule>