force-app/main/default/objects/EYI_REC__c/validationRules/RERA_Certificate_No_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>RERA_Certificate_No_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  IF(
    OR(
      ISPICKVAL(EYI_RERA_Registered__c, &apos;Yes&apos;),
      ISPICKVAL(EYI_RERA_Registered__c, &apos;In Progress&apos;)
    ),
    ISBLANK(EYI_RERA_Certificate_No__c),
    null
  ),
  EYI_IsAutomationBypassed__c = false
)</errorConditionFormula>
    <errorDisplayField>EYI_RERA_Certificate_No__c</errorDisplayField>
    <errorMessage>Please enter the RERA Certificate No</errorMessage>
</ValidationRule>